benchmark/scenarios/networking/networkpolicy-egress-dns/manifests/networkpolicy-allow-all-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-egress
  namespace: egress
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - {}
