benchmark/scenarios/networking/networkpolicy-egress-dns/manifests/networkpolicy-deny-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
  namespace: egress
spec:
  podSelector: {}
  policyTypes:
    - Egress
